--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "vuex": "^3.6.0"
+    },
+    "dependencies": {
+        "chart.js": "^2.9.4",
+        "vue-chartjs": "^3.5.1",
+        "vue-sweetalert2": "^4.1.1"
     }
 }
